--- a/notebooks/TEMPLATE.ipynb
+++ b/notebooks/TEMPLATE.ipynb
@@ -9,28 +9,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-12 19:27:23,253 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
+      "2025-01-12 19:56:36,706 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n"
+      "Using device: cuda\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-12 19:27:26,095 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
-      "2025-01-12 19:27:26,096 - INFO - Preprocessing training data\n",
+      "2025-01-12 19:56:47,380 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
+      "2025-01-12 19:56:47,381 - INFO - Preprocessing training data\n",
       "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:119: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  embedding = torch.load(f\"{dataset_details.folder_path}/{self.gene_embedding_name}.pt\")\n",
-      "2025-01-12 19:27:26,371 - INFO - Removing observations with perturbations not in the dataset as a column\n",
+      "2025-01-12 19:56:47,945 - INFO - Removing observations with perturbations not in the dataset as a column\n",
       "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:152: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
       "  adata.obsm[\"embedding\"] = adata.X.toarray().astype('float32')\n",
-      "2025-01-12 19:28:11,446 - INFO - Doing OOD split\n"
+      "2025-01-12 19:57:40,386 - INFO - Doing OOD split\n"
      ]
     },
     {
@@ -108,7 +108,7 @@
      "text": [
       "/home/njwfish/miniconda3/envs/omnicell/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-01-12 19:47:54,598 - INFO - SCLambda model selected\n"
+      "2025-01-12 19:57:51,653 - INFO - SCLambda model selected\n"
      ]
     }
    ],
@@ -123,10 +123,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "2025-01-12 19:59:05,108 - INFO - Computing 32000-dimensional perturbation embeddings for 279630 cells...\n",
+      "/home/njwfish/miniconda3/envs/omnicell/lib/python3.9/site-packages/anndata/_core/storage.py:85: ImplicitModificationWarning: X should not be a np.matrix, use np.ndarray instead.\n",
+      "  warnings.warn(msg, ImplicitModificationWarning)\n",
+      "2025-01-12 19:59:35,468 - INFO - Splitting data...\n",
+      "  0%|          | 0/200 [00:00<?, ?it/s]"
      ]
     }
    ],
