Modifying readme for doc on OMNICELL_VARIABLE

--- a/notebooks/adamson.ipynb
+++ b/notebooks/adamson.ipynb
@@ -2,20 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scanpy as sc"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read('/orcd/data/omarabu/001/Omnicell_datasets/adamson/perturb_processed.h5ad')"
+    "import scanpy as sc\n",
+    "from omnicell.data.catalogue import Catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDetails(path='/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad', folder_path='/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/', cell_key='cell_type', control='NT', pert_key='gene', var_names_key=None, HVG=False, log1p_transformed=False, count_normalized=False, precomputed_DEGs=True, description='Some description of the dataset', pert_embeddings=['bioBERT'], cell_embeddings=[], gene_embeddings=['bioBERT'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Catalogue.get_dataset_details('satija_IFNB_raw')"
    ]
   },
   {
