--- a/notebooks/gears/data_tutorial.ipynb
+++ b/notebooks/gears/data_tutorial.ipynb
@@ -12,6 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7bce2d84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e91ac9e",
    "metadata": {},
    "source": [
     "## (2) Create your own Perturb-Seq data\n",
@@ -48,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ea020156",
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "425f02ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9678f7f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +437,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c66c97a6",
    "metadata": {},
    "source": [
     "### Suggested normalization\n",
@@ -442,6 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e2168ac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,6 +459,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81b54492",
    "metadata": {},
    "source": [
     "### Create dataloader\n",
@@ -462,20 +470,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9fd5e2ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9.46M/9.46M [00:00<00:00, 13.3MiB/s]\n"
+      "Found local copy...\n"
      ]
     }
    ],
