--- a/notebooks/TEMPLATE.ipynb
+++ b/notebooks/TEMPLATE.ipynb
@@ -59,10 +59,11 @@
     "import torch\n",
     "import logging\n",
     "from pathlib import Path\n",
-    "from omnicell.config.config import Config\n",
+    "from omnicell.config.config import Config, ETLConfig, ModelConfig, DatasplitConfig, EvalConfig\n",
     "from omnicell.data.loader import DataLoader\n",
     "from omnicell.constants import PERT_KEY, GENE_EMBEDDING_KEY, CONTROL_PERT\n",
     "from train import get_model\n",
+    "from \n",
     "\n",
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
@@ -74,10 +75,20 @@
     "SPLIT_CONFIG = \"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\"\n",
     "EVAL_CONFIG = \"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\"  # Set this if you want to run evaluations\n",
     "\n",
-    "# Load configuration\n",
+    "# Load configuration from paths \n",
     "config = Config.from_yamls(MODEL_CONFIG, ETL_CONFIG, SPLIT_CONFIG, EVAL_CONFIG)\n",
-    "config.etl_config['gene_embedding'] = 'bioBERT'\n",
-    "config.etl_config['drop_unmatched_perts'] = True\n",
+    "\n",
+    "#Alternatively you can initialize the config objects manually as follows:\n",
+    "# etl_config = ETLConfig(name = XXX, log1p = False, drop_unmatched_perts = False, ...)\n",
+    "# model_config = ...\n",
+    "# embedding_config = ...\n",
+    "# datasplit_config = ...\n",
+    "# eval_config = ...\n",
+    "# config = Config(etl_config, model_config, datasplit_config, eval_config)\n",
+    "\n",
+    "\n",
+    "config.etl_config.pert_embedding = 'bioBERT'\n",
+    "config.etl_config.drop_unmatched_perts = True\n",
     "# Set up device\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Using device: {device}\")\n",
