some more changes

--- a/notebooks/TEMPLATE.ipynb
+++ b/notebooks/TEMPLATE.ipynb
@@ -70,13 +70,18 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Configure paths\n",
-    "MODEL_CONFIG = \"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/linear_mean_model.yaml\"\n",
-    "ETL_CONFIG = \"/orcd/data/omarabu/001/njwfish/omnicell/configs/ETL/no_preprocessing.yaml\"  # Change this to your desired ETL config\n",
-    "SPLIT_CONFIG = \"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\"\n",
-    "EVAL_CONFIG = \"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\"  # Set this if you want to run evaluations\n",
+    "MODEL_CONFIG = ModelConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/linear_mean_model.yaml\")\n",
+    "ETL_CONFIG = ETLConfig(name = \"no_preprocessing\", log1p = False, drop_unmatched_perts = True, pert_embedding = 'bioBERT')\n",
+    "EMBEDDING_CONFIG = \n",
+    "\n",
+    "SPLIT_CONFIG = DatasplitConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
+    "EVAL_CONFIG = EvalConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
     "\n",
     "# Load configuration from paths \n",
-    "config = Config.from_yamls(MODEL_CONFIG, ETL_CONFIG, SPLIT_CONFIG, EVAL_CONFIG)\n",
+    "config = Config(model_config=ModelConfig,\n",
+    "                 etl_config=ETL_CONFIG, \n",
+    "                 datasplit_config=SPLIT_CONFIG, \n",
+    "                 eval_config=EVAL_CONFIG)\n",
     "\n",
     "#Alternatively you can initialize the config objects manually as follows:\n",
     "# etl_config = ETLConfig(name = XXX, log1p = False, drop_unmatched_perts = False, ...)\n",
