--- a/notebooks/TEMPLATE.ipynb
+++ b/notebooks/TEMPLATE.ipynb
@@ -9,7 +9,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-16 21:24:53,036 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
+      "2025-01-27 17:05:32,277 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
+      "2025-01-27 17:05:32,278 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
+      "2025-01-27 17:05:32,280 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
+      "2025-01-27 17:05:32,281 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
+      "2025-01-27 17:05:32,282 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
+      "2025-01-27 17:05:32,284 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
+      "2025-01-27 17:05:32,285 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
+      "2025-01-27 17:05:32,287 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/kang.yaml\n",
+      "2025-01-27 17:05:32,288 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
      ]
     },
     {
@@ -23,14 +31,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-16 21:24:55,976 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
-      "2025-01-16 21:24:55,977 - INFO - Preprocessing training data\n",
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:117: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  embedding = torch.load(f\"{dataset_details.folder_path}/{self.gene_embedding_name}.pt\")\n",
-      "2025-01-16 21:24:56,026 - INFO - Removing observations with perturbations not in the dataset as a column\n",
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:136: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
+      "2025-01-27 17:05:35,587 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
+      "2025-01-27 17:05:35,588 - INFO - Preprocessing training data\n",
+      "2025-01-27 17:05:35,590 - INFO - Using identity features for perturbations\n",
+      "2025-01-27 17:05:35,700 - INFO - Removing observations with perturbations not in the dataset as a column\n",
+      "2025-01-27 17:05:35,890 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
+      "/orcd/data/omarabu/001/opitcho/omnicell/notebooks/../omnicell/data/loader.py:178: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
       "  adata.obsm[\"embedding\"] = adata.X.toarray().astype('float32')\n",
-      "2025-01-16 21:25:35,749 - INFO - Doing OOD split\n"
+      "2025-01-27 17:06:11,639 - INFO - Doing OOD split\n"
      ]
     },
     {
@@ -59,11 +67,10 @@
     "import torch\n",
     "import logging\n",
     "from pathlib import Path\n",
-    "from omnicell.config.config import Config, ETLConfig, ModelConfig, DatasplitConfig, EvalConfig\n",
+    "from omnicell.config.config import Config, ETLConfig, ModelConfig, DatasplitConfig, EvalConfig, EmbeddingConfig\n",
     "from omnicell.data.loader import DataLoader\n",
     "from omnicell.constants import PERT_KEY, GENE_EMBEDDING_KEY, CONTROL_PERT\n",
     "from train import get_model\n",
-    "from \n",
     "\n",
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
@@ -71,11 +78,11 @@
     "\n",
     "# Configure paths\n",
     "MODEL_CONFIG = ModelConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/linear_mean_model.yaml\")\n",
-    "ETL_CONFIG = ETLConfig(name = \"no_preprocessing\", log1p = False, drop_unmatched_perts = True, pert_embedding = 'bioBERT')\n",
-    "EMBEDDING_CONFIG = \n",
+    "ETL_CONFIG = ETLConfig(name = \"no_preprocessing\", log1p = False, drop_unmatched_perts = True)\n",
+    "EMBEDDING_CONFIG = EmbeddingConfig(pert_embedding='GenePT')\n",
     "\n",
-    "SPLIT_CONFIG = DatasplitConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
-    "EVAL_CONFIG = EvalConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
+    "SPLIT_CONFIG = DatasplitConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
+    "EVAL_CONFIG = EvalConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
     "\n",
     "# Load configuration from paths \n",
     "config = Config(model_config=ModelConfig,\n",
@@ -116,33 +123,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-16 21:25:43,175 - INFO - Mean model selected\n"
+     "ename": "AttributeError",
+     "evalue": "type object 'ModelConfig' has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m get_model(\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_config\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m, config\u001b[38;5;241m.\u001b[39mmodel_config, loader, pert_rep_map, input_dim, device, pert_ids, gene_emb_dim)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'ModelConfig' has no attribute 'name'"
      ]
     }
    ],
    "source": [
     "\n",
-    "model = get_model(config.get_model_name(), config.model_config, loader, pert_rep_map, input_dim, device, pert_ids, gene_emb_dim)"
+    "model = get_model(config.model_config.name, config.model_config, loader, pert_rep_map, input_dim, device, pert_ids, gene_emb_dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/models/mean_models/model.py:121: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  pert_means = df.groupby('perturbation').mean()\n"
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mtrain(adata)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
@@ -395,7 +409,7 @@
   "kernelspec": {
    "display_name": "omnicell",
    "language": "python",
-   "name": "omnicell"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
